# MaiMuriDX

./: .gitignore  README.md  action.py  cli.py  config.json  core.py  judge.py  main.py  majparse.py  pyproject.toml  render.py  simai.py  slides.py  util.py
docs/: 开发笔记.md
svg/: __init__.py  parser.py  path.py
